# polygonize

./: CMakeLists.txt  README.md  format.txt
data/: test.txt
src/: CMakeLists.txt  polygonize.cpp
